MYPLAN-1481 Fixed scrollbars in lightbox

--- a/myplan-web/src/main/webapp/ks-myplan/css/myplan.css
+++ b/myplan-web/src/main/webapp/ks-myplan/css/myplan.css
@@ -1776,7 +1776,7 @@ label.scheduled {
     background: #fff !important;
 }
 .fancybox-inner #kualiLightboxForm.uif-lightbox {
-    height: 100%;
+    height: 100% !important;
 }
 /* jGrowl ########################################################################### */
 div.jGrowl div.jGrowl-notification {
@@ -1796,6 +1796,7 @@ div.jGrowl div.jGrowl-notification div.jGrowl-close {
 }
 
 /* beginning of scrollbar ########################################################################### */
+/*
 ::-webkit-scrollbar {
     width: 8px;
     height: 8px;
@@ -1816,16 +1817,15 @@ div.jGrowl div.jGrowl-notification div.jGrowl-close {
     -moz-border-radius: 8px;
 }
 ::-webkit-scrollbar-thumb:vertical {
-    /* height:50px; */
     background-color: #999;
     border-radius: 8px;
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
 }
 ::-webkit-scrollbar-thumb:horizontal {
-    /* width:50px; */
     background-color: #999;
     border-radius: 8px;
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
 }
+*/
